--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,13 @@
 body {
   @apply bg-black;
 }
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
